[gd_scene load_steps=17 format=2]

[ext_resource path="res://hpsimplifiedhans-light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/KanjiListSceneContainer.gd" type="Script" id=2]
[ext_resource path="res://images/LeftArrowHover.png" type="Texture" id=3]
[ext_resource path="res://images/RightArrow.png" type="Texture" id=4]
[ext_resource path="res://images/RightArrowPress.png" type="Texture" id=5]
[ext_resource path="res://images/LeftArrowDisabled.png" type="Texture" id=6]
[ext_resource path="res://images/LeftArrowPress.png" type="Texture" id=7]
[ext_resource path="res://images/RightArrowDisabled.png" type="Texture" id=8]
[ext_resource path="res://images/RightArrowHover.png" type="Texture" id=9]
[ext_resource path="res://images/LeftArrow.png" type="Texture" id=10]
[ext_resource path="res://scenes/ReturnButton.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.305882, 0.333333, 0.478431, 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 1 )

[node name="GridScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Panel" parent="."]
margin_left = 3.36743
margin_top = 3.36737
margin_right = 1022.37
margin_bottom = 603.367
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 234.0
margin_right = 764.0
margin_bottom = 589.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="."]
margin_left = 765.861
margin_top = 443.786
margin_right = 880.861
margin_bottom = 635.786
rect_scale = Vector2( 0.52, 0.720001 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="."]
margin_left = 826.2
margin_top = 443.957
margin_right = 941.2
margin_bottom = 635.957
rect_scale = Vector2( 0.52, 0.72 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 9 )
texture_disabled = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterLabel" type="Label" parent="."]
margin_left = 781.151
margin_top = 93.438
margin_right = 1021.15
margin_bottom = 128.438
custom_fonts/font = SubResource( 2 )
text = "[CHARACTER]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefinitionLabel" type="Label" parent="."]
margin_left = 781.151
margin_top = 133.708
margin_right = 981.151
margin_bottom = 433.708
custom_fonts/font = SubResource( 3 )
text = "character descriptions"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" parent="." instance=ExtResource( 11 )]

[node name="Progress" type="Label" parent="."]
margin_left = 781.0
margin_top = 38.0
margin_right = 1008.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 4 )
text = "Learnt?"
valign = 2
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageNumber" type="Label" parent="."]
margin_left = 894.0
margin_top = 549.0
margin_right = 996.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 5 )
text = "0/0"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="LeftButton" to="." method="_on_LeftButton_button_down"]
[connection signal="button_down" from="RightButton" to="." method="_on_RightButton_button_down"]
[connection signal="button_down" from="ReturnButton" to="." method="_on_ReturnButton_button_down"]
